--- a/src/hd_3dstouch_command/package.xml
+++ b/src/hd_3dstouch_command/package.xml
@@ -4,7 +4,7 @@
   <name>hd_3dstouch_command</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="simeon.capy@rs.tus.ac.jp">simeon</maintainer>
+  <maintainer email="simeon.capy@rs.tus.ac.jp">Siméon Capy</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
