--- a/src/video_publisher/package.xml
+++ b/src/video_publisher/package.xml
@@ -4,8 +4,11 @@
   <name>video_publisher</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="simeon.capy@rs.tus.ac.jp">simeon</maintainer>
+  <maintainer email="simeon.capy@rs.tus.ac.jp">Siméon Capy</maintainer>
   <license>TODO: License declaration</license>
+
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
