--- a/src/robot_control/package.xml
+++ b/src/robot_control/package.xml
@@ -7,6 +7,10 @@
   <maintainer email="simeon.capy@rs.tus.ac.jp">Siméon Capy</maintainer>
   <license>Apache-2.0</license>
 
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>ros2launch</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
