--- a/src/robot_control/config/xarm.yaml
+++ b/src/robot_control/config/xarm.yaml
@@ -1,3 +1,6 @@
 /xarm_controller:
    ros__parameters:
+      robot_joints_number: 6 # Number of joints of the robot
+      robot_arm_number: 1 # Number of arms of the robot
       robot_ip: '192.168.1.217' # IP of the robot bridge
+      robot_home_position: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0] # Origin of each joints of the robot in degrees
