--- a/src/communication_interface/package.xml
+++ b/src/communication_interface/package.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>video_publisher</name>
+  <name>communication_interface</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="simeon.capy@rs.tus.ac.jp">Siméon Capy</maintainer>
+  <maintainer email="contact@yoshidalab.com">yoshidalab</maintainer>
   <license>TODO: License declaration</license>
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>ros2launch</exec_depend>
-  <exec_depend>ffmpeg</exec_depend>
+  <exec_depend>ros_tcp_endpoint</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
