--- a/src/communication_interface/config/zmq.yaml
+++ b/src/communication_interface/config/zmq.yaml
@@ -1,4 +1,6 @@
 /**:
    ros__parameters:
-      tcp_ip: '192.168.0.238'
-      tcp_port: 5001
+      host_ip: '192.168.0.238'
+      host_port: 80
+      protocol: 'ws'
+      ws_path: '/ws' # todo: check if this is needed
