--- a/src/communication_interface/config/zmq.yaml
+++ b/src/communication_interface/config/zmq.yaml
@@ -1,6 +1,6 @@
 /**:
    ros__parameters:
-      host_ip: '192.168.0.238'
+      host_ip: '192.168.0.162'
       host_port: 80
       protocol: 'ws'
-      ws_path: '/ws' # todo: check if this is needed
+      ws_path: '/atob' # todo: check if this is needed
