First version using rclpy-message-converter

--- a/src/communication_interface/package.xml
+++ b/src/communication_interface/package.xml
@@ -13,6 +13,7 @@
   <exec_depend>ros_tcp_endpoint</exec_depend>
   <exec_depend>python3-nep-pip</exec_depend>
   <exec_depend>python3-netifaces</exec_depend>
+  <exec_depend>rclpy-message-converter</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
