--- a/src/communication_interface/config/zmq_OPERATOR.yaml
+++ b/src/communication_interface/config/zmq_OPERATOR.yaml
@@ -10,6 +10,7 @@
       end_effector_position: 'std_msgs/Float32MultiArray'
       servo_on_off: 'std_msgs/Bool'
       hand_open_close: 'std_msgs/Float32MultiArray'
+      controller_activated: 'std_msgs/Float32MultiArray'
       emergency_stop: 'std_msgs/Bool'
    ros_output:
       robot_joint_values: 'std_msgs/Float32MultiArray'
