correction after tests

--- a/src/robot_control/config/fillie.yaml
+++ b/src/robot_control/config/fillie.yaml
@@ -9,10 +9,10 @@
       mirrored: True
       control_source: "unity"
       use_hand: True
-      limit_left: [[250.0, 550.0], [-200.0, 400.0], [300.0, 450.0], [-45.0, 45.0], [-45.0, 45.0], [-45.0, 45.0]]
-      limit_right: [[250.0, 550.0], [-400.0, 200.0], [300.0, 450.0], [-45.0, 45.0], [-45.0, 45.0], [-45.0, 45.0]]
-      offset_left: [300,  200, 184.6, 0.0, 0.0, 0.0]
-      offset_right: [300, -200, 184.6, 0.0, 0.0, 0.0]
+      limit_left: [250.0, 550.0, -200.0, 400.0, 300.0, 450.0, -45.0, 45.0, -45.0, 45.0, -45.0, 45.0] # 6x2 matrix
+      limit_right: [250.0, 550.0, -400.0, 200.0, 300.0, 450.0, -45.0, 45.0, -45.0, 45.0, -45.0, 45.0] # 6x2 matrix
+      offset_left: [300.0,  200.0, 184.6, 0.0, 0.0, 0.0]
+      offset_right: [300.0, -200.0, 184.6, 0.0, 0.0, 0.0]
       gain_left: 0.5
       gain_right: 0.5
       omit_orientation: True
